# bfm_2016

./: ERSEM-BFM_publications.docx  History_ERSEM-BFM.docx  README-GOTM  README.md  bfm_env.csh
src/: CMakeLists.txt  IncludeOptions.txt  Install  TEMP
src/BFM/Ben/: .BenBac.F90.swp  .files  BenBac.F90  BenGlobal.F90  BenLimitNutrientUptake.F90  BenNBac.F90  BenNBac.F90.new  BenOrganism.F90  BenPhyto.F90  BenthicSystem.F90  Bioturbation.F90  CalcZeroOrderOxInLayer.F90  CorrectConcNearBed.F90  FilterFeeder.F90  FilterFeeder.F90.orig  FindMidPointExp.F90  ModuleBenBac.f90  ModuleBenNBac.f90  ModuleBenOrganism.f90  ModuleBenPhyto.F90  ModuleBioturbation.f90  ModuleFilterFeeder.f90  ResetTotMassVar.F90
src/BFM/Bennut/: .files  BenAmmonium.F90  BenAnoxic.F90  BenDenitriDepth.F90  BenNitrate.F90  BenNitrogenShifting.F90  BenOxygen.F90  BenPhosphate.F90  BenProfiles.F90  BenQ1Transport.F90  BenSilica.F90  BenthicNutrient2.F90  BenthicNutrient3.F90  BenthicReturn1.F90  BenthicReturn2.F90  CalcSulphideHorizon.F90  CalculateFromLayer.F90  CalculateFromSet.f90  CalculateSet.F90  CalculateShift.f90  CalculateTau.f90  CompleteSet.F90  DefineSet.f90  ExpDist.f90  FindLayerNr.f90  FixProportionCoeff.F90  GetInfoFromSet.F90  LimitRates.F90  ModuleBenAmmonium.f90  ModuleBenAnoxic.f90  ModuleBenDenitriDepth.f90  ModuleBenNitrate.f90  ModuleBenNutConstants.f90  ModuleBenNutInterface.f90  ModuleBenNutType.f90  ModuleBenNutVariables.f90  ModuleBenOxygen.f90  ModuleBenPhosphate.f90  ModuleBenQ1Transport.F90  ModuleBenSilica.f90  (+20 more)
src/BFM/CO2/: .files  Alkalinity.F90  BenAlkalinity.F90  BenCO2Profiles.F90  BenCO2Transport.F90  BenpH.F90  CO2.F90  CO2System.F90  CalcCO2SatInField.F90  CalcCO2SatInField.F90.orig  CalcSchmidtNumberCO2.F90  ModuleBenAlkalinity.f90  ModuleBenCO2Transport.f90  ModuleCO2.f90  PelCO2.F90  SurfaceCO2Diffusion.F90  SurfaceCO2Processes.F90
src/BFM/General/: .Ecology.F90.swp  .ModuleInterface.F90.swp  .files  AllocateMem.F90  AllocateMem.F90.keep  CalcBndyConcentration.F90  CalcRiverConcentration.F90  CalcWaterProp.F90  CalculateThermoVars.F90  CheckD2Rates.F90  CheckMassConservationC.F90  CheckMassConservationNPS.F90  ControlNutsBdy.F90  ControlNutsBdy.F90.johan  ControlNutsBdy.F90.orig  CoupleInfoOnNSinkingToGotm.F90  Daan.f90.removed  Ecology.F90  Ecology.F90~  FindExtremeRates.F90  FindNaNInRates.F90  GlobalDefsBFM.model  GlobalDefsBFM.model.orig  GlobalDefsBFM.model.withmacroalgaefluxes  InitBoxParams.f90  InitTrack.F90  InitTransportStateTypes.f90  Initialize.F90  ModuleConstants.f90  ModuleDaan.f90  ModuleDiffusion.f90  ModuleGlobFun.f90  ModuleGlobalMem.f90  ModuleInterface.F90  ModuleMem.F90  ModuleParam.F90  SourceFunctions.F90  TopPredLosses.F90  Track.F90  bfm_error_msg.F90  (+4 more)
src/BFM/Light/: LightAdaptation.F90  PhotoAvailableRadiation.F90
src/BFM/Oxygen/: .files  CalcOxygenSaturation_3.F90  CalcSchmidtNumberOx.F90  ModuleWindOxReaeration_3.f90  SurfaceO2Diffusion.F90  WindOxReaeration_3.F90
src/BFM/PelB/: .files  AttachRateToTEP.F90  CalcChlorophylla.F90  CalcLight.F90  CalcVerticalExtinction.F90  CalcVerticalExtinction.F90.orig  CalcVerticalExtinctionAndLight.F90.obsolete  CorrectForDiffBoundLayer.F90  LimitNutrientUptake.F90  LimitNutrientUptake.F90.orig  MacroPhyto.F90.orig  MacroPhyto.F90.revisedlightwithmacroalgaefluxes  MacroPhyto.F90.withmacroalgaefluxes  MacroPhyto.F90.withmacroalgaefluxes_withrevisedlight  MesoZoo.F90  MicroZoo.F90  ModuleMacroPhyto.F90.orig  ModuleMacroPhyto.F90.used2016  ModuleMesoZoo.f90  ModuleMicroZoo.f90  ModulePelBac.f90  ModulePelChem.f90  ModulePelGlobal.f90  ModulePhaeo.f90  ModulePhyto.F90  PelBac.F90  PelChem.F90  PelGlobal.F90  PelagicSystem.F90  PhaeocystisCalc.F90  Phyto.F90  Source_D3_withgroup.F90  Source_D3_withstate.F90
src/BFM/PelBen/: .files  CalcPelMassInM2.F90  ControlBenPartNutrientBuffers.F90  CouplingBioSilt.F90  FilterLimPart.F90  ModuleControlBenPartNutrientBuffers.f90  ModuleSettling.f90  PelForcingForBen.F90  RecalcPenetrationDepth.F90  ResuspensionBenPhyto.F90  ResuspensionPartDetritus.F90  Settling.F90  Settling.F90.orig  Y3Z2Coup.F90  botflux.F90  botflux.F90.orig
src/BFM/Silt/: .files  BenthicSiltDist.F90  CalcSiltResuspension.F90  Makefile  ModuleSilt.f90  Silt.F90  spm_util.F90  wave.F90
src/BFM/include/: INCLUDE.h
src/BFM/proto/: AllocateMem.proto  INCLUDE.proto  ModuleMem.F90  ModuleMem.proto  set_var_info_bfm.proto
src/BFM/scripts/: GenerateGlobalBFMF90Code  GenerateGlobalBFMF90Code.2016  GenerateGlobalBFMF90Code.keep  Manage_Coupling_BFM  check_code  check_on_mixed  do  grep_parameters
src/BFM/share/: .files  api_bfm.F90  init_cnps.F90  netcdf_bfm.F90
src/getm/: CMakeLists.txt  Module2DMacroPhyto.F90  Module2DMacroPhyto.F90.orig  coupling_getm_bfm.F90  coupling_getm_bfm.F90.orig  coupling_getm_bfm.F90.piet  coupling_getm_bfm_rivers.F90  init_2dbio_ncdf.F90  modify_meteo_input.F90  output_restart_bio.F90  output_restart_bio.F90.piet  read_restart_bio_ncdf.F90  read_restart_ncdf.F90  read_restart_ncdf.F90.new  read_restart_ncdf.F90.piet  read_restart_ncdf.F90.similar_piet  save_bfm_2d.F90  variables_bio_3d.F90
src/getm/BFMMakes/: .MCBFM  2d_Makefile  3d_Makefile  Rules.make  Rules.make.orig  VERSION_timestamp  domain_Makefile  futils_Makefile  getm_Makefile  meteo_Makefile  ncdf_Makefile  output_Makefile
src/getm/getm_routines_not_used/: CalcHDepth.m  bdy_3d.F90  bdy_3d.F90.johan  bdy_3d.F90.orig  bdy_spec.F90  cnv_2d.F90  cnv_3d.F90  (+26 more)
src/gotm/: CMakeLists.txt  D2toD1.f90  D3toD1.f90  adv_center_bfm.F90  asciiout.F90  bfm_output.F90  bfm_output_ncdf.F90  bio.F90  bio.F90.2024  bio_bfm.F90  bio_bfm.F90.modern  bio_solver.F90  bio_var.F90  bio_var.F90.2024  controlled_output.F90  diff_center_bfm.F90  diff_center_bfm.F90.2024  gotm_error_msg.F90  gotmout.F90  hotstart.F90  make_flux_output.F90  ncdfout.F90  output.F90  process_model.F90  trace_bdy.F90
src/hotstart/: Makefile  Rules.make  main.F90
src/share/: .files  calcmean_bfm.F90.obsolete  init_var_bfm.F90  init_var_bfm.F90.orig
src/share_seq_2024/: calcmean_bfm.F90  init_var_bfm.F90  netcdf_bfm.F90  string_functions.F90
(+59 files in other folders)
